--- a/.gitattributes
+++ b/.gitattributes
@@ -13,18 +13,18 @@
 *.controller merge=unityyamlmerge eol=lf
 
 ## Unity ##
-*.cs =lfs diff=lfs merge=lfs -text
-*.cginc =lfs diff=lfs merge=lfs -text
-*.shader =lfs diff=lfs merge=lfs -text
-*.mat =lfs diff=lfs merge=lfs -text
-*.anim =lfs diff=lfs merge=lfs -text
-*.unity =lfs diff=lfs merge=lfs -text
-*.prefab =lfs diff=lfs merge=lfs -text
-*.physicsMaterial2D =lfs diff=lfs merge=lfs -text
-*.physicMaterial merge=unityyamlmerge eol=lf
-*.asset merge=unityyamlmerge eol=lf
-*.meta merge=unityyamlmerge eol=lf
-*.controller merge=unityyamlmerge eol=lf
+*.cs filter=lfs diff=lfs merge=lfs -text
+*.cginc filter=lfs diff=lfs merge=lfs -text
+*.shader filter=lfs diff=lfs merge=lfs -text
+*.mat filter=lfs diff=lfs merge=lfs -text
+*.anim filter=lfs diff=lfs merge=lfs -text
+*.unity filter=lfs diff=lfs merge=lfs -text
+*.prefab filter=lfs diff=lfs merge=lfs -text
+*.physicsMaterial2D filter=lfs diff=lfs merge=lfs -text
+*.physicMaterial filter=lfs diff=lfs merge=lfs -text
+*.asset filter=lfs diff=lfs merge=lfs -text
+*.meta filter=lfs diff=lfs merge=lfs -text
+*.controller filter=lfs diff=lfs merge=lfs -text
 
 ## git-lfs ##
 #Image
