--- a/.gitattributes
+++ b/.gitattributes
@@ -61,3 +61,4 @@
 *.lxo filter=lfs diff=lfs merge=lfs -text
 *.aar filter=lfs diff=lfs merge=lfs -text
 *.so filter=lfs diff=lfs merge=lfs -text
+*.json filter=lfs diff=lfs merge=lfs -text
