--- a/.gitattributes
+++ b/.gitattributes
@@ -68,3 +68,4 @@
 *.db filter=lfs diff=lfs merge=lfs -text
 *.st filter=lfs diff=lfs merge=lfs -text
 *.pdb filter=lfs diff=lfs merge=lfs -text
+*.kra filter=lfs diff=lfs merge=lfs -text
